[metadata]
name = sprockets-statsd
version = attr: sprockets_statsd.version
description = Asynchronously send metrics to a statsd instance.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
url = https://sprockets-statsd.readthedocs.io/
project_urls:
    Bug Tracker = https://github.com/sprockets/sprockets-statsd/issues/
    Documentation = https://sprockets-statsd.readthedocs.io/
    Source Code = https://github.com/sprockets/sprockets-statsd/
author = Dave Shawley
author_email = daveshawley@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed

[options]
packages = find:
install_requires =

[options.extras_require]
tornado =
    tornado>=5
dev =
    asynctest==0.13.0
    coverage==5.5
    flake8==3.8.4
    flake8-import-order==0.18.1
    sphinx==3.5.2
    sphinx-autodoc-typehints==1.11.1
    tornado>=5
    yapf==0.30.0
readthedocs =
    sphinx==3.5.2
    sphinx-autodoc-typehints==1.11.1
    tornado>=5

[options.packages.find]
exclude =
    tests

[options.package_data]
sprockets_statsd =
    py.typed

[build_sphinx]
build_dir = build/sphinx
nitpicky = 1
warning_is_error = 1

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
fail_under = 100
show_missing = 1

[coverage:run]
branch = 1
source = sprockets_statsd

[flake8]
application_import_names = sprockets_statsd,tests
exclude = build,env,dist
import_order_style = pycharm

[mypy]
cache_dir = build/mypy-cache
check_untyped_defs = true
show_error_codes = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-sprockets_statsd]
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true

[yapf]
allow_split_before_dict_value = false
indent_dictionary_value = true
